# diesel_cli_ext

./: .gitignore  .travis.yml  Cargo.toml  README.md  readme.md  schema.rs  test.rs
.github/: FUNDING.yml
docs/: index.md
src/: main.rs  parse-old.rs  parse.rs  schema.rs
test_data/: schema.rs  schema_localmodded.rs  schema_mysql.rs  schema_uuid.rs  schema_with_ies.rs  schema_with_ip_bytea.rs  schema_with_jsonb.rs  schema_with_rust_style_fields.rs  schema_with_struct_name_override.rs  schema_with_tab.rs  schema_with_time.rs
test_data/expected_output/: schema.rs  schema_insertable.rs  schema_jsonb.rs  schema_localmodded.rs  schema_mysql.rs  schema_with_ies.rs  schema_with_ip_bytea.rs  schema_with_rust_style_fields.rs  schema_with_struct_name_override.rs  schema_with_tablename_derives.rs  schema_with_uuid.rs
test_data/src/: schema.rs
