[package]
name = "diesel_cli_ext"
version = "0.1.3"
authors = ["Abby <i@abby.md>"]
license = "MIT OR Apache-2.0"
description = "Provides different tools for projects using the diesel_cli."
readme = "README.md"
documentation = "https://github.com/abbychau/diesel_cli_ext/blob/master/README.md"
homepage = "http://abby.md"
repository = "https://github.com/abbychau/diesel_cli_ext"
keywords = ["diesel", "codegen", "cli", "diesel_cli", "diesel_cli_ext"]

[[bin]]
name = "diesel_ext"
path = "src/main.rs"

[dependencies]
